crates/keron-lang/tests/corpus/errors/check/reconcile_int.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `reconcile` expects a resource or list of resources, found `Int`
  --> 1:11
  |
1 | reconcile 42
  |           ^^
